logs/Slang/generic/member/class_member_test_39.sv.log
name: class_member_test_39
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_39.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_39.sv:7:1: error: language feature not yet supported
class constructible;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_39.sv:8:9: error: expected identifier
function new;
        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_39.sv:8:10: error: expected statement
function new;
         ^~~
